--- a/front/package.json
+++ b/front/package.json
@@ -17,7 +17,8 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
-    "history": "^5.0.0",
+    "connected-react-router": "^6.9.1",
+    "history": "4.10.1",
     "immer": "^9.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
